# rules_rust

./: README.md
examples/: WORKSPACE.bazel  bazel-bin  bazel-examples  bazel-out  bazel-testlogs
examples/proto/blobstore/local/: BUILD.bazel  local.proto
examples/proto/configuration/auth/: BUILD.bazel  auth.proto
examples/proto/configuration/blobstore/: BUILD.bazel  blobstore.proto
examples/proto/configuration/blobstore/googleapis-common-protos-1_3_1/google/rpc/: BUILD.bazel
examples/proto/configuration/blockdevice/: BUILD.bazel  blockdevice.proto
examples/proto/configuration/builder/: BUILD.bazel  builder.proto
examples/proto/configuration/cloud/aws/: BUILD.bazel  aws.proto
examples/proto/configuration/digest/: BUILD.bazel  digest.proto
examples/proto/configuration/eviction/: BUILD.bazel  eviction.proto
examples/proto/configuration/global/: BUILD.bazel  global.proto
examples/proto/configuration/grpc/: BUILD.bazel  grpc.proto
examples/proto/configuration/grpc/struct/: BUILD.bazel  atruct.proto
examples/proto/configuration/http/: BUILD.bazel  http.proto
examples/proto/configuration/jwt/: BUILD.bazel  jwt.proto
examples/proto/configuration/storage/: BUILD.bazel  storage.proto
examples/proto/configuration/tls/: BUILD.bazel  tls.proto
examples/proto/helloworld/: BUILD.bazel
examples/sys/basic/: Cargo.toml
proto/patches/: BUILD.bazel
proto/raze/: Cargo.toml
