package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto:proto.bzl", "rust_proto_library")

proto_library(
    name = "auth_proto",
    srcs = ["auth.proto"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

rust_proto_library(
    name = "auth_rust_proto",
    deps = [":auth_proto"],
)