package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto:proto.bzl", "rust_proto_library")

proto_library(
    name = "blobstore_proto",
    srcs = ["blobstore.proto"],
    deps = [
        "//proto/configuration/blockdevice:blockdevice_proto",
        "//proto/configuration/cloud/aws:aws_proto",
        "//proto/configuration/digest:digest_proto",
        "//proto/configuration/grpc:grpc_proto",
        "//proto/configuration/http:http_proto",
        "//proto/configuration/tls:tls_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "//proto/configuration/blobstore/googleapis-common-protos-1_3_1/google/rpc:status_proto",
    ],
)

rust_proto_library(
    name = "blobstore_rust_proto",
    deps = [":blobstore_proto"],
)