package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto:proto.bzl", "rust_proto_library")

proto_library(
    name = "blockdevice_proto",
    srcs = ["blockdevice.proto"],
)

rust_proto_library(
    name = "blockdevice_rust_proto",
    deps = [":blockdevice_proto"],
)
