package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto:proto.bzl", "rust_proto_library")

proto_library(
    name = "global_proto",
    srcs = ["global.proto"],
    deps = [
        "//proto/configuration/grpc:grpc_proto",
        "//proto/configuration/http:http_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

rust_proto_library(
    name = "global_rust_proto",
    deps = [":global_proto"],
)