package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto:proto.bzl", "rust_proto_library")

proto_library(
    name = "http_proto",
    srcs = ["http.proto"],
    deps = ["//proto/configuration/tls:tls_proto"],
)

rust_proto_library(
    name = "http_rust_proto",
    deps = [":http_proto"],
)